--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using WebApplication5.Areas.HelpPage.Models
-@using WebApplication5.Areas.HelpPage.ModelDescriptions
+@using Demos.Web.Areas.HelpPage.Models
+@using Demos.Web.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
