--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using WebApplication5.Areas.HelpPage.ModelDescriptions
+@using Demos.Web.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
