--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using WebApplication5.Areas.HelpPage.Models
+@using Demos.Web.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
