--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using WebApplication5.Areas.HelpPage.ModelDescriptions
+@using Demos.Web.Areas.HelpPage.ModelDescriptions
 @model SimpleTypeModelDescription
 @Model.Documentation
