--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using WebApplication5.Areas.HelpPage.Models
+@using Demos.Web.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
