--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Views/Customers/Review.cshtml
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Views/Customers/Review.cshtml
@@ -1,6 +1,4 @@
-﻿@model Demos.Web.Models.Customer
-
-<h4>Customer</h4>
+﻿<h4>Customer</h4>
 <hr />
 <div class="alert alert-success">
     @TempData["Message"]
